# othello

./: .clang-format  .codecov.yml  .gitignore  .ycm_extra_conf.py  LICENSE  README.md  cheet_sheet.txt  log_1.txt
.cache/clangd/index/: main.cpp.2786F241BFB56FB0.idx
.github/workflows/: style.yml  ubuntu.yml
all/: CMakeLists.txt
database/: CMakeLists.txt
database/source/: main.cpp
documentation/: CMakeLists.txt
documentation/pages/: about.dox
install/project/include/hello-1.0.0/: hello.h
install/project/include/hello-1.0.0/hello/: version.h
install/project/lib/cmake/hello-1.0.0/: helloConfig.cmake  helloTargets.cmake
install/standalone/lib/cmake/hello-1.0.0/: helloTargets-noconfig.cmake
my_project/: CMakeLists.txt
my_project/source/: dbg.hpp  hello.cpp  main.cpp  type.hpp
orthello/: CMakeLists.txt
orthello/include/: database.hpp  dbg.hpp  fs_util.hpp  game.hpp  hash.hpp  move.h  move.hpp
orthello/source/: move.cpp
othello/: CMakeLists.txt
othello/include/: Position.hpp  const.h  database.hpp  dbg.hpp  fs_util.hpp  game.hpp  game_ctx.hpp  generator.hpp  hash.hpp  move.hpp  observer.hpp  pn_search.hpp  type.hpp
script/: lazy_init.sh
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: test_hello.cpp
test/test_piece_db/: db5
